# syntra-cli

./: .gitignore  CLI_SETUP.md  DESIGN.md  IMPLEMENTATION_NOTES.md  INSTALL.md  INSTALL_SUCCESS.md  INTERACTIVE_MODE.md  MANIFEST.in  README.md  config.py  console.py  install.sh  pip.config  pyproject.toml  requirements.txt  setup.py  utils.py
CLI/: __init__.py  __main__.py  api.py  cli.py  config.py  main.py  syntra_cli.py  syntra_repl.py
CLI/syntra_pkg/: __init__.py  _cli_impl.py  api.py  cli.py  repl.py
syntra_pkg/: __init__.py  _cli_impl.py  cli.py
syntra_pkg/config/: __init__.py  defaults.py  schema.py  settings.py
syntra_pkg/skills/: __init__.py  base.py  registry.py
syntra_pkg/skills/builtin/: __init__.py  agents_skill.py  ask_skill.py  chat_skill.py  health_skill.py  info_skill.py  settings_skill.py
