[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntra"
version = "0.1.0"
description = "Syntra AI - Goalixa AI DevOps Teammate"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amirreza Rezaie", email = "amirreza@goalixa.com"}
]
keywords = ["ai", "devops", "orchestration", "kubernetes", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
    "rich>=14.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]
full = [
    "crewai>=0.1.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "redis>=5.0.0",
    "kubernetes>=28.0.0",
]

[project.urls]
Homepage = "https://github.com/goalixa/syntra"
Documentation = "https://github.com/goalixa/syntra#readme"
Repository = "https://github.com/goalixa/syntra"
Issues = "https://github.com/goalixa/syntra/issues"

[project.scripts]
syntra = "CLI.syntra_pkg.cli:main"
syntra-repl = "CLI.syntra_pkg.repl:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

