[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntra-cli"
version = "0.1.0"
description = "Syntra AI - Goalixa AI DevOps Teammate CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amirreza Rezaie", email = "82rezaeei@gmail.com"}
]
keywords = ["ai", "devops", "cli", "syntra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=14.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/goalixa/syntra"
Documentation = "https://github.com/goalixa/syntra#readme"
Repository = "https://github.com/goalixa/syntra"
Issues = "https://github.com/goalixa/syntra/issues"

[project.scripts]
syntra-cli = "CLI.syntra_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
